# weftgrid

./: .gitignore  NOTICE  README.md  package-lock.json  package.json  tsconfig.inject.json  tsconfig.json  vitest.config.ts
.github/workflows/: build.yml  release.yml
crates/weft-cli/: .gitignore  Cargo.toml
crates/weft-cli/src/: cmd_browser.rs  cmd_notify.rs  cmd_ssh.rs  main.rs  rpc_client.rs
crates/weft-cli/tests/: cli.test.rs
inject/: dom-actions.ts  dom-walk.ts  snapshot.ts
scripts/: build-inject.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/inject/: snapshot.js
src-tauri/src/: command_registry.rs  inject_asset.rs  lib.rs  main.rs
src-tauri/src/agent_rpc/: agent_rpc.test.rs  auth.rs  commands.rs  dispatch.rs  mod.rs  protocol.rs  server.rs
src-tauri/src/automation/: cdp_extras.rs  commands.rs  inject.rs  mod.rs
src-tauri/src/browser/: commands.rs  mod.rs  overlay-bounds-physical.rs  overlay-bounds-physical.test.rs  overlay-manager.rs  overlay-manager.test.rs  overlay-recreate-state-transfer.rs  overlay-recreate-state-transfer.test.rs  tauri-window-spawner.rs
src-tauri/src/config/: commands.rs  keybindings.rs  migration.rs  mod.rs  schema.rs  session.rs  state.rs  store.rs  weft_config.rs  weft_trust.rs  workspace_store.rs
src-tauri/src/import/: catalog.rs  commands.rs  consent.rs  cookies.rs  dedupe.rs  history.rs  mod.rs  types.rs
src-tauri/src/model/: layout.rs  mod.rs  panel.rs  snapshot.rs  workspace.rs
src-tauri/src/notify/: commands.rs  manager.rs  mod.rs  osc.rs  scanner.rs
src-tauri/src/palette/: mod.rs  nucleo_search.rs
src-tauri/src/pty/: coalescer.rs  commands.rs  mod.rs  reader.rs
src-tauri/src/reliability/: cdp_reconnect.rs  commands.rs  crash_reporter.rs  logging.rs  mod.rs  overlay_recovery.rs  pty_watchdog.rs  recovery.rs  redaction.rs  rotation.rs  webview_recovery.rs
src-tauri/src/reliability/recovery/: backoff.rs  pty.rs
src-tauri/src/sidebar/: commands.rs  git_probe.rs  mod.rs  port_scanner.rs  report_receiver.rs  snapshot_enrich.rs  state.rs
src-tauri/src/ssh/: client.rs  commands.rs  config.rs  host_key.rs  mod.rs  reconnect.rs  session.rs  socks.rs  socks_broker.rs  socks_broker_tests.rs
src-tauri/src/vmclient/: commands.rs  local_stub.rs  mod.rs  wire_types.rs
src/automation/: automation-client.ts  snapshot-script.test.ts
src/browser/: browser-pane.test.ts  browser-pane.ts
src/command-palette/: command-registry.test.ts  command-registry.ts  custom-command-runner.test.ts  custom-command-runner.ts  palette-overlay.test.ts  palette-overlay.ts  palette-search.test.ts  palette-search.ts  switcher.test.ts  switcher.ts
src/notifications/: notification-client.test.ts  notification-client.ts  osc-handlers.test.ts  osc-handlers.ts  pane-ring-binding.test.ts  pane-ring-binding.ts
src/panes/: a11y.test.ts  a11y.ts  divider-drag.test.ts  divider-drag.ts  focus-nav.test.ts  focus-nav.ts  keybinding-source.ts  pane-renderer.test.ts  pane-renderer.ts  split-tree-serialize.test.ts  split-tree-serialize.ts  split-tree.test.ts  split-tree.ts  tabs.test.ts  tabs.ts
src/routes/: +page.svelte
src/settings/: keybinding-editor.svelte  (+3 more)
(+26 files in other folders)
