[package]
name = "weftgrid"
version = "0.1.0"
description = "Cross-platform terminal for AI agents"
authors = ["weftgrid"]
edition = "2021"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "weftgrid_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
# Pinned exact — bump deliberately (see plan P2 keystone). Resolved versions from Cargo.lock.
tauri-build = { version = "=2.6.2", features = [] }

[dependencies]
tauri = { version = "=2.11.2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.23.2", features = ["v4", "serde"] }
portable-pty = "0.9.0"
tokio = { version = "1.52.3", features = ["full"] }
directories = "6.0.0"
rusqlite = { version = "0.31", features = ["bundled"] }
# default-features off disables rookie's `appbound` feature so it never attempts
# the Chrome v20 app-bound bypass (infostealer signature; spec says skip+warn).
rookie = { version = "0.5.6", default-features = false }
russh = { version = "0.61.1", default-features = false, features = ["ring", "flate2"] }
# In-process fuzzy matcher for the command palette (P16). cmux used FFI/cdylib
# only because Swift can't call a Rust crate directly — irrelevant here.
nucleo = "0.5"
# Structured logging + crash diagnosability (P14). Non-blocking file appender with
# rotation; a redaction layer strips secrets before they reach disk.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

